styles signup & login forms; fixes z-index on hover for events

--- a/public/style.css
+++ b/public/style.css
@@ -144,10 +144,12 @@ h2 {
   font-size: .7em;
   font-weight: bold;
   letter-spacing: .08em;
+  z-index: 0;
   transition: all 0.2s ease-in-out;
 }
 
 .fc-event:hover {
+  z-index: 2;
   transform: scale(2);
   overflow: visible;
 }
@@ -222,4 +224,19 @@ footer {
 
 .form-group {
   display: inline-block;
+}
+
+.signUpForm {
+  margin: 0 auto;
+  width: 50%;
+  margin-bottom: 2%;
+}
+
+.formBtn {
+  background-color: #E6DAE8;
+}
+
+.formBtn:hover {
+  background-color: #8a69d4;
+  color: white;
 }
